src/components/UspList/UspList.css
.usp-wrapper {
    position: fixed;
    inset: 0;
    max-width: var(--global-content-max-width);
    margin-inline: auto;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    pointer-events: none;
}

.usp-item {
    box-sizing: border-box;
    width: min(60%, 24ch);
    margin: 1.2rem;
    padding: 1.2rem;
}

.usp-item-headline {
    font-size: clamp(1.5rem, 5vw, 2.8rem);
    margin-block: 0;
    margin-block: 1.2rem;
    color: var(--color-text-super-light-purple);
}

.usp-item-content {
    font-size: clamp(0.8rem, 3vw, 1.5rem);
    color: var(--color-text-light-purple);
    margin-block: 0.5rem;
    line-height: 1.6;
}

@media (min-width: 768px) {
    .usp-item {
        width: 36ch;
    }
}

